moved project to netcore tooling and use use netstandard2.0. build target to add to assemblyinfo.cs does not work in this version.

--- a/src/xunit.assemblyfixture.targets
+++ b/src/xunit.assemblyfixture.targets
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <Target Name="GenerateAssemblyFixtureFrameworkInfo" Inputs="$(MSBuildProjectFullPath)" Outputs="$(AssemblyFixtureFrameworkInfoFile)">
-		<WriteLinesToFile File="$(AssemblyFixtureFrameworkInfoFile)" Lines="[assembly: Xunit.TestFrameworkAttribute (&quot;Xunit.TestFramework&quot;, &quot;xunit.assemblyfixture&quot;)]" Overwrite="true" />
+		<WriteLinesToFile File="$(AssemblyFixtureFrameworkInfoFile)" Lines="[assembly: Xunit.TestFrameworkAttribute (&quot;Xunit.TestFramework&quot;, &quot;assemblyfixture&quot;)]" Overwrite="true" />
 	<ItemGroup>
 		<FileWrites Include="$(AssemblyFixtureFrameworkInfoFile)" />
 	</ItemGroup>
