Modernize package and projects

--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,33 @@
-*.exe
-*.exe.manifest
-*.pdb
-*.pidb
+bin
+obj
+artifacts
+pack
+TestResults
+.vs
+.vscode
+
 *.suo
 *.sdf
 *.userprefs
-*.sln.docstates
 *.user
-*.opensdf
-*.sdf
-bin
-obj
-.vs
-/lib
-/TestResults
-local.properties
-*ncrunchsolution*
-out.txt
-_ReSharper*
-build
-ipch/*
 *.nupkg
-packages/
-*.t4properties
-*.DS_Store
-*.sln.ide
 *.metaproj
 *.tmp
-*.ipch
+*.log
 *.cache
+*.binlog
+*.zip
+__azurite*.*
+__*__
+
+.nuget
+*.lock.json
+*.nuget.props
+*.nuget.targets
+
+node_modules
+_site
+.jekyll-metadata
+.jekyll-cache
+Gemfile.lock
+package-lock.json
