--- a/src/AssemblyFixture/AssemblyFixture.csproj
+++ b/src/AssemblyFixture/AssemblyFixture.csproj
@@ -11,11 +11,11 @@
     </Description>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="all" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="NuGetizer" Version="0.9.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\readme.md" Link="readme.md" />
   </ItemGroup>
 </Project>
