--- a/src/AssemblyFixture/AssemblyFixture.csproj
+++ b/src/AssemblyFixture/AssemblyFixture.csproj
@@ -9,11 +9,14 @@
     <Description>
       Assembly-level shared state via IAssemblyFixture, just like built-in collection and class fixture state.
     </Description>
+    <PackNone>true</PackNone>
+    <IsTestProject>false</IsTestProject>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="all" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="NuGetizer" Version="0.9.0" />
+    <PackageReference Include="xunit.abstractions" Version="2.0.3" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\readme.md" Link="readme.md" />
