Update to new CI pkg domain

--- a/src/nuget.config
+++ b/src/nuget.config
@@ -7,7 +7,7 @@
   <packageSources>
     <clear />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-    <add key="kzu.io" value="https://pkg.kzu.app/index.json" />
+    <add key="kzu.app" value="https://pkg.kzu.app/index.json" />
   </packageSources>  
   <trustedSigners>
     <author name="Microsoft">
@@ -25,7 +25,7 @@
     <packageSource key="nuget.org">
       <package pattern="*" />
     </packageSource>
-    <packageSource key="kzu.io">
+    <packageSource key="kzu.app">
       <package pattern="*" />
     </packageSource>
   </packageSourceMapping>
